--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^66.0.0",
+    "spotify-web-api-node": "^5.0.2",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^4.4.0"
   },
