--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^66.0.0",
+    "lyrics-finder": "^21.7.0",
     "spotify-web-api-node": "^5.0.2",
     "translation-google": "^0.2.1",
     "youtube-search": "^1.1.6",
