--- a/package.json
+++ b/package.json
@@ -4,30 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
-    "axios": "^0.21.3",
-    "discord.js": "^12.5.3",
-    "dotenv": "^8.6.0",
+    "@discordjs/opus": "^0.5.3",
+    "axios": "^0.24.0",
+    "discord-speech-recognition": "^2.2.0",
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
-    "googleapis": "^66.0.0",
+    "googleapis": "^92.0.0",
+    "libsodium-wrappers": "^0.7.9",
     "lyrics-finder": "^21.7.0",
-    "node-schedule": "^2.0.0",
-    "song-lyrics-api": "git+https://github.com/s0ftik3/lyrics-api.git",
+    "node-schedule": "^2.1.0",
+    "safe-eval": "^0.4.1",
     "spotify-web-api-node": "^5.0.2",
-    "translation-google": "^0.2.1",
+    "translate-google": "^1.5.0",
     "youtube-search": "^1.1.6",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "2.2.1"
+    "eslint": "^8.3.0",
+    "prettier": "2.5.0"
   }
 }
